🐛 Fix for off center contact button

--- a/styles/banners/Footer.module.scss
+++ b/styles/banners/Footer.module.scss
@@ -3,10 +3,14 @@
   font-size: 16px;
   font-weight: 500;
   color: var(--text-color);
-  margin: 40px auto;
+  margin: 6px auto 40px auto;
   width: 100%;
   text-align: center;
   padding: 0px 16px;
+}
+
+.text {
+  margin-bottom: 40px;
 }
 
 .contactBtn {
@@ -16,25 +20,42 @@
   margin: auto;
 }
 
+.left {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.right {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
 .footerButtons {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+  position: relative;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
   max-width: 1260px;
   margin: 40px auto;
   padding: 0px 32px;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1000px) {
   .root {
     font-size: 36px;
-    margin: 25px auto 120px;
+    margin: 12px auto 100px;
   }
   
   .contactBtn {
     width: 134px;
     height: 48px;
     font-size: 20px;
+  }
+
+  .text {
+    margin-bottom: 60px;
   }
 }
